--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <div class="btn-wrapper">
         <a href="#" class="btn signup">Hinako</a>
         <p>or</p>
-        <a href="#" class="btn facebook"><span class="fa fa-facebook"></span>Facebookで登録</a>
+        <a href="#" class="btn facebook"><span class="fa fa-facebook"></span>Hinako</a>
         <a href="#" class="btn twitter"><span class="fa fa-twitter"></span>Twitterで登録</a>
       </div>
     </div>
