--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <h2>HINAKO</h2>
         <h3>Let's learn to code, learn to be creative!</h3>
       </div>
-      <span class="btn message">さっそく開発する</span>
+      <span class="btn message">hihihi</span>
     </div>
   </div>
   <footer>
